# go1_real

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: deploy.launch
model/: policy.onnx  policy.pt  policy_metadata.json  policy_numpy.npz
model/phase1/: faithful_metrics.json
model/phase1/exported/: deployment_config.json
model/phase1/git/: go1_peg.diff
model/phase1/params/: agent.yaml  env.yaml
outputs/2026-05-18/16-31-54/.hydra/: config.yaml  hydra.yaml
scripts/: deploy.launch  deploy_policy.py  export_latest_student.sh
