<?xml version="1.0"?>
<package format="2">
  <name>go1_real</name>
  <version>0.1.0</version>
  <description>Real-world Unitree Go1 policy deployment package for ROS.</description>

  <maintainer email="user@example.com">songhw</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>unitree_legged_msgs</depend>

  <export>
  </export>
</package>
